# test-bot

./: base.db  bot.py  config.py  functions.py  logger.py  main.py  menu.py  message.py  pyproject.toml
markup/: avito_markup.py  olx_markup.py  tk.py  youla_markup.py
utils/: general.py
